<resources>
    <string name="app_name">NTUT Bookaholics Circle</string>

    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="studentID">Student ID</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="have_an_account"><u>Already have an account?</u></string>
    <string name="do_not_have_and_account"><u>Do not have an account?</u></string>
    <string name="change_username">Change Username</string>
    <string name="new_username">New Username</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="alphaBetaWaring">Please be reminded that the app is still on developing.\nYour data may not be encrypted during the connection.\nYour data may be unencrypted and stored in the database.\nDO NOT enter ant real data of yours.</string>
    <string name="nullUID">Student ID cannot be empty</string>
    <string name="UIDformat">Student ID format error</string>
    <string name="nullUsername">Username cannot be empty</string>
    <string name="nullPW">Password cannot be empty</string>
    <string name="nullTitle">Title cannot be empty</string>
    <string name="nullPrice">Price cannot be empty</string>
    <string name="pwNotMatch">Passwords did not match</string>
    <string name="loginSuccess">Login Success!</string>
    <string name="loginFail">Login Failed!</string>
    <string name="registerSuccess">Register Success!</string>
    <string name="registerFail">Register Failed!</string>
    <string name="uploadSuccess">Upload Success!</string>
    <string name="uploadFail">Upload Failed!</string>
    <string name="deleteSuccess">Delete Success!</string>
    <string name="deleteFail">Delete Failed!</string>
    <string name="usernameChange">Username Changed!</string>
    <string name="pwChange">Password Changed!</string>
    <string name="changeFail">Change Failed!</string>
    <string name="itemEdit">Item Edit Success!</string>
    <string name="editFail">Edit Failed!</string>
    <string name="sent">Message sent!</string>
    <string name="error">Error</string>
    <string name="delete_item">Delete Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="new_title">New Title</string>
    <string name="new_description">New Description</string>
    <string name="new_price">New Price</string>
    <string name="project_link">Project Link</string>
    <string name="githubURL">https://github.com/Ming119/109-2_Android-Application-Development_Project</string>
    <string name="contributors">Contributors</string>
    <string name="_108590049_fu_chi_kei">108590049 Fu Chi Kei</string>
    <string name="_108590050_li_ho_ming">108590050 Li Ho Ming</string>
    <string name="_108590061_starvian_huang">108590061 Starvian Huang</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="uplaod_a_new_item">List A New Item</string>
    <string name="upload">List</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="sign_out">\tSign out</string>
    <string name="version_info">\tVersion info</string>
    <string name="contribution">\tContribution</string>
    <string name="schange_username">\tChange Username</string>
    <string name="schange_password">\tChange Password</string>
    <string name="loginFirst">Please Login First</string>
    <string name="contectSellerSuccess">Message sent\nPlease check your messages box</string>
    <string name="mark_as_sold">Mark as sold</string>
    <string name="sold">Item marked as sold</string>
    <string name="version">Beta 0617</string>
</resources>